# sdl2-meson-example

./: .gitmodules  README.md  meson.build
src/: meson.build
